[package]
name = "demo1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[package.metadat]
binaries = [
    
]
[[bin]]
name = "test"
path = "src/new.rs"



[[bin]]
name = "test2"
path = "src/test2.rs"


[[bin]]
name = "test3"
path = "src/test3.rs"

[[bin]]
name = "new"
path = "src/new.rs"


[[bin]]
name = "ref"
path = "src/resferecens.rs"

[[bin]]
name = "copy"
path = "src/copy.rs"

[[bin]]
name = "enum"
path = "src/enum.rs" 

[[bin]]
name = "SE"
path = "src/struct_with_enum.rs" 


[[bin]]
name = "generics"
path = "src/generics.rs" 

[[bin]]
name = "option"
path = "src/options.rs" 

[[bin]]
name = "result"
path = "src/result.rs"

[[bin]]
name = "vector"
path = "src/vector.rs"


[[bin]]
name = "hashmap"
path = "src/hashmap.rs"